# Home-Assignment-1-Multi-Sensor-Pipeline

./: README.md
src/: .gitignore
src/imu_pipeline/: CMakeLists.txt  package.xml
src/imu_pipeline/config/: imu_params.yaml
src/imu_pipeline/launch/: launch.py
src/imu_pipeline/msg/: ImuReading.msg
src/imu_pipeline/src/: filter_node.cpp  logger_node.cpp  sensor_driver.cpp
