<?xml version="1.0"?>
<package format="3">

  <name>imu_pipeline</name>
  <version>0.0.0</version>

  <description>Multi-Sensor Pipeline using ROS 2 Jazzy</description>

  <maintainer email="your_email@example.com">
    Your Name
  </maintainer>

  <license>Apache-2.0</license>


  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- Message generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <!-- C++ -->
  <depend>rclcpp</depend>


  <!-- Custom message dependency -->
  <depend>builtin_interfaces</depend>


  <!-- Runtime support for generated messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>


  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>


  <!-- Required when defining custom interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>